zeit.find changes
=================

0.13 (unreleased)
-----------------

- Die Suche hat jetzt eine Scrollbar je Box statt eine insgesamt (#6032).


0.12 (2009-08-21)
-----------------

- Serie, Teaser-Text und Subtitel wird mit angezeigt (#6024).

0.11 (2009-08-14)
-----------------

- Styling

- Favoriten robuster gegen nicht vorhandene Objekte.

0.10 (2009-08-10)
-----------------

- Die Suche ist nun Startseite des CMS (#5857)

0.9 (2009-08-03)
----------------

- Wenn die erweiterte Suche eingeklappt ist, werden die Kriterien klein, als
  Text dargestellt.

- lucenequery nach zeit.solr verschoben.
  
- Link zum Objekt im CMS

0.8 (2009-07-28)
----------------

- Objectchooser mit Suche (#4499).

- Suchfeld macht keine Phrasensuche mehr (#5792).

0.7 (2009-07-22)
----------------

- Moved solr connection (via pysolr) to zeit.solr

- Search for content types changed to not transmit all types on each search but
  none when all types should be found.

0.6.1 (2009-06-18)
------------------

- Repackaged (setupools/svn 1.6 problem).

0.6 (2009-06-18)
----------------

- Nur 20 Suchergebnisse anzeigen

- Styling


0.5 (2009-05-09)
----------------

- »Für diese Seite«

- Facetierte Suche

- Filter am Suchergebnis

- Korrekte Typ-Icons.

- Sytling

- Dropdown für Ressort-Auswahl

- Vollständige Typliste in der erweiterten Suche

0.4 (2009-05-26)
----------------

- Anzeige der Anzahl für die facetierte Suche.

- Enter-Taste startet die Suche.

- Relateds in Suchergebnissen

- Veröffentlichungs-Status anzeigen

- Vorschau-Links

- Erweiterte Suche

0.3 (2009-05-17)
-----------------

- Kommunikation mit Solr, d.h. es werden echte Daten angezeigt.

- Alle ``test.py`` nach ``tests.py`` umbenannt.

0.2 (2009-04-30)
----------------

- Suchergebnisse haben jetzt den »Favorite-Star«. Markierte Objekte tauchen im
  Tab »Favoriten« und im Clipboard auf.


0.1 (2009-04-23)
---------------

- Erstes Release: Such-UI mit statischen Daten