@@ -1,1 +1,1 @@
-{"responseHeader":{"status":0,"QTime":74,"params":{"wt":"json","rows":"20","sort":"score desc","fl":"uniqueId published teaser_title supertitle last-semantic-change ressort authors volume year title icon","q":"(text:(Obama))"}},"response":{"numFound":606,"start":0,"docs":[{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-23T11:20:14.8Z","published":"published","ressort":"Wirtschaft","supertitle":"Gesundheit","teaser_title":"Obama bringt strenges Tabakgesetz auf den Weg","title":"Obama bringt strenges Tabakgesetz auf den Weg","uniqueId":"http://xml.zeit.de/online/2009/26/obama-tabakgesetz","volume":26,"year":2009,"authors":["rf"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-08T06:39:18.562Z","published":"published-with-changes","ressort":"Politik","supertitle":"Obama in Russland","teaser_title":"Obamas Pragmatismus überzeugt Moskau","title":"Obamas Pragmatismus überzeugt Moskau","uniqueId":"http://xml.zeit.de/online/2009/28/obama-russland-neustart","volume":28,"year":2009,"authors":["Johannes Voswinkel"]},{"icon":"/++noop++bb9209f308a597bc5a39fb6d6b2e80bf/@@/zeit-content-link-interfaces-ILink-zmi_icon.png","last-semantic-change":"2009-06-27T12:02:26.739Z","published":"published-with-changes","ressort":"Wirtschaft","supertitle":"Kritik an Obama","teaser_title":"Ist Schuldenmachen so schlimm wie Krieg?","title":"Ist Schuldenmachen so schlimm wie Krieg?","uniqueId":"http://xml.zeit.de/online/2009/27/weblog-herdentrieb-obama","volume":27,"year":2009,"authors":["Fabian Lindner"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-07T08:23:38.712Z","published":"published","ressort":"Politik","supertitle":"Atomwaffen-Arsenale","teaser_title":"Obama und Medwedjew wollen abrüsten","title":"Obama und Medwedjew wollen abrüsten","uniqueId":"http://xml.zeit.de/online/2009/28/obama-moskau-atomwaffen","volume":28,"year":2009,"authors":["kg"]},{"icon":"/++noop++2f531e4061a5a16fa90b3ab4fe6977c8/@@/zeit-content-gallery-interfaces-IGallery-zmi_icon.png","last-semantic-change":"2009-06-25T17:09:17.419Z","published":"published","ressort":"Politik","supertitle":"Merkel trifft Obama","teaser_title":"Transatlantischer Zoff hat Tradition","title":"Transatlantischer Zoff hat Tradition","uniqueId":"http://xml.zeit.de/online/2009/26/bg-kanzlertreffen","volume":26,"year":2009,"authors":["Michael Schlieben"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-25T17:50:14.58Z","published":"published","ressort":"Politik","supertitle":"Nahost-Konflikt","teaser_title":"Hamas will direkten Dialog","title":"Hamas will direkten Dialog","uniqueId":"http://xml.zeit.de/online/2009/27/hamas-dialog-obama","volume":27,"year":2009,"authors":["mm"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-12T10:19:58.622Z","published":"published-with-changes","ressort":"Politik","supertitle":"Afghanistan","teaser_title":"Mach's allein, Obama","title":"Mach's allein, Obama","uniqueId":"http://xml.zeit.de/online/2009/22/afghanistan-kandahar-strategie","volume":22,"year":2009,"authors":["Jochen Bittner"]},{"icon":"/++noop++2f531e4061a5a16fa90b3ab4fe6977c8/@@/zeit-content-gallery-interfaces-IGallery-zmi_icon.png","last-semantic-change":"2009-06-25T08:48:06.385Z","published":"published-with-changes","ressort":"Politik","supertitle":"Bilder","teaser_title":"Obama in Deutschland","title":"Obama besucht Deutschland","uniqueId":"http://xml.zeit.de/online/2009/24/bg-obama-deutschland","volume":24,"year":2009,"authors":["Tilman Steffen"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-28T06:17:13.152Z","published":"published","ressort":"Gesellschaft","supertitle":"HIV","teaser_title":"Obamas machen öffentlichen Aids-Test","title":"Obamas machen öffentlichen Aids-Test","uniqueId":"http://xml.zeit.de/online/2009/27/obama-hiv-test","volume":27,"year":2009,"authors":["aku"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-01-16T15:34:13.92Z","published":"published-with-changes","ressort":"Politik","supertitle":"Amtseinführung Obama","teaser_title":"Obamas Ziele, Obamas Versprechen","title":"Obamas Ziele, Obamas Versprechen","uniqueId":"http://xml.zeit.de/online/2009/04/vereidigung-obama-ziele-versprechen","volume":4,"year":2009},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-05T16:20:19.598Z","published":"published-with-changes","ressort":"Politik","supertitle":"Obamas Moskaureise","teaser_title":"Obama fordert Russland zur Zusammenarbeit auf","title":"Obama fordert Russland zur Zusammenarbeit auf","uniqueId":"http://xml.zeit.de/online/2009/28/obama-in-russland","volume":28,"year":2009,"authors":["on"]},{"icon":"/++noop++bb9209f308a597bc5a39fb6d6b2e80bf/@@/zeit-content-link-interfaces-ILink-zmi_icon.png","last-semantic-change":"2009-01-20T20:43:12Z","published":"published-with-changes","ressort":"International","supertitle":"Link zum Transkript","teaser_title":"Obamas Rede im Wortlaut","title":"Obamas Rede im Wortlaut","uniqueId":"http://xml.zeit.de/online/2009/04/obama-rede-transkript","volume":4,"year":2009},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-25T14:10:14.546Z","published":"published-with-changes","ressort":"Politik","supertitle":"Unruhen in Iran","teaser_title":"Ahmadineschad fordert von Obama Entschuldigung","title":"Ahmadineschad fordert von Obama Entschuldigung","uniqueId":"http://xml.zeit.de/online/2009/27/iran-mussawi-verhandlungen","volume":26,"year":2009,"authors":["kg"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-26T19:22:50.141Z","published":"published","ressort":"Politik","supertitle":"Merkel trifft Obama ","teaser_title":"\"Obama und ich sind sehr eng beieinander\" ","title":"\"Obama und ich sind sehr eng beieinander\" ","uniqueId":"http://xml.zeit.de/online/2009/27/merkel-obama-unterstuetzung","volume":27,"year":2009,"authors":["misch"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-10T16:55:36.172Z","published":"published","ressort":"Politik","supertitle":"Diplomatie","teaser_title":"Obama nominiert Botschafter für Deutschland","title":"Obama nominiert Botschafter für Deutschland","uniqueId":"http://xml.zeit.de/online/2009/29/obama-botschafter","volume":29,"year":2009,"authors":["kg"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-13T07:26:16.596Z","published":"published","ressort":"Politik","supertitle":"Besuch in Ghana","teaser_title":"Obama ermuntert Afrikaner zur Eigenverantwortung","title":"Obama ermuntert Afrikaner zur Eigenverantwortung","uniqueId":"http://xml.zeit.de/online/2009/29/obama-ghana-demokratie","volume":29,"year":2009,"authors":["lg"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-06T15:44:15.87Z","published":"published-with-changes","ressort":"Meinung","supertitle":"Obamas Russlandkurs","teaser_title":"Liebesgrüße nach Moskau","title":"Liebesgrüße nach Moskau","uniqueId":"http://xml.zeit.de/online/2009/28/obama-russland-besuch","year":2009,"authors":["Christoph von Marschall"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-29T11:15:15.413Z","published":"published-with-changes","ressort":"Politik","supertitle":"Deutsche Volksparteien","teaser_title":"Die Zeit der Helden und Alpha-Tiere ist vorbei","title":"Die Zeit der Helden und Alpha-Tiere ist vorbei","uniqueId":"http://xml.zeit.de/online/2009/26/volksparteien-charisma","volume":26,"year":2009,"authors":["Werner A. Perger"]},{"icon":"/++noop++2f531e4061a5a16fa90b3ab4fe6977c8/@@/zeit-content-gallery-interfaces-IGallery-zmi_icon.png","last-semantic-change":"2009-02-04T08:32:24.705Z","published":"published-with-changes","ressort":"International","supertitle":"Obamas Amtsantritt","teaser_title":"Tanz quer durch Washington","title":"Tanz quer durch Washington","uniqueId":"http://xml.zeit.de/online/2009/04/bg-obama-mi","volume":4,"year":2009,"authors":["Redaktion"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-26T09:57:20.148Z","published":"published","ressort":"Politik","supertitle":"Merkel in Washington","teaser_title":"Geschäftliche Routine mit Obama","title":"Geschäftliche Routine mit Obama","uniqueId":"http://xml.zeit.de/online/2009/26/merkel-obama-besuch","volume":26,"year":2009,"authors":["Martin Klingst"]}]}}
+{"responseHeader":{"status":0,"QTime":74,"params":{"wt":"json","rows":"20","sort":"score desc","fl":"uniqueId published teaser_title supertitle last-semantic-change ressort authors volume year title icon","q":"(text:(Obama))"}},"response":{"numFound":606,"start":0,"docs":[{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-23T11:20:14.8Z","published":"published","ressort":"Wirtschaft","supertitle":"Gesundheit","teaser_title":"Obama bringt strenges Tabakgesetz auf den Weg","title":"Obama bringt strenges Tabakgesetz auf den Weg","uniqueId":"http://xml.zeit.de/online/2007/01/Somalia","volume":26,"year":2009,"authors":["rf"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-08T06:39:18.562Z","published":"published-with-changes","ressort":"Politik","supertitle":"Obama in Russland","teaser_title":"Obamas Pragmatismus überzeugt Moskau","title":"Obamas Pragmatismus überzeugt Moskau","uniqueId":"http://xml.zeit.de/online/2009/28/obama-russland-neustart","volume":28,"year":2009,"authors":["Johannes Voswinkel"]},{"icon":"/++noop++bb9209f308a597bc5a39fb6d6b2e80bf/@@/zeit-content-link-interfaces-ILink-zmi_icon.png","last-semantic-change":"2009-06-27T12:02:26.739Z","published":"published-with-changes","ressort":"Wirtschaft","supertitle":"Kritik an Obama","teaser_title":"Ist Schuldenmachen so schlimm wie Krieg?","title":"Ist Schuldenmachen so schlimm wie Krieg?","uniqueId":"http://xml.zeit.de/online/2009/27/weblog-herdentrieb-obama","volume":27,"year":2009,"authors":["Fabian Lindner"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-07T08:23:38.712Z","published":"published","ressort":"Politik","supertitle":"Atomwaffen-Arsenale","teaser_title":"Obama und Medwedjew wollen abrüsten","title":"Obama und Medwedjew wollen abrüsten","uniqueId":"http://xml.zeit.de/online/2009/28/obama-moskau-atomwaffen","volume":28,"year":2009,"authors":["kg"]},{"icon":"/++noop++2f531e4061a5a16fa90b3ab4fe6977c8/@@/zeit-content-gallery-interfaces-IGallery-zmi_icon.png","last-semantic-change":"2009-06-25T17:09:17.419Z","published":"published","ressort":"Politik","supertitle":"Merkel trifft Obama","teaser_title":"Transatlantischer Zoff hat Tradition","title":"Transatlantischer Zoff hat Tradition","uniqueId":"http://xml.zeit.de/online/2009/26/bg-kanzlertreffen","volume":26,"year":2009,"authors":["Michael Schlieben"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-25T17:50:14.58Z","published":"published","ressort":"Politik","supertitle":"Nahost-Konflikt","teaser_title":"Hamas will direkten Dialog","title":"Hamas will direkten Dialog","uniqueId":"http://xml.zeit.de/online/2009/27/hamas-dialog-obama","volume":27,"year":2009,"authors":["mm"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-12T10:19:58.622Z","published":"published-with-changes","ressort":"Politik","supertitle":"Afghanistan","teaser_title":"Mach's allein, Obama","title":"Mach's allein, Obama","uniqueId":"http://xml.zeit.de/online/2009/22/afghanistan-kandahar-strategie","volume":22,"year":2009,"authors":["Jochen Bittner"]},{"icon":"/++noop++2f531e4061a5a16fa90b3ab4fe6977c8/@@/zeit-content-gallery-interfaces-IGallery-zmi_icon.png","last-semantic-change":"2009-06-25T08:48:06.385Z","published":"published-with-changes","ressort":"Politik","supertitle":"Bilder","teaser_title":"Obama in Deutschland","title":"Obama besucht Deutschland","uniqueId":"http://xml.zeit.de/online/2009/24/bg-obama-deutschland","volume":24,"year":2009,"authors":["Tilman Steffen"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-28T06:17:13.152Z","published":"published","ressort":"Gesellschaft","supertitle":"HIV","teaser_title":"Obamas machen öffentlichen Aids-Test","title":"Obamas machen öffentlichen Aids-Test","uniqueId":"http://xml.zeit.de/online/2009/27/obama-hiv-test","volume":27,"year":2009,"authors":["aku"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-01-16T15:34:13.92Z","published":"published-with-changes","ressort":"Politik","supertitle":"Amtseinführung Obama","teaser_title":"Obamas Ziele, Obamas Versprechen","title":"Obamas Ziele, Obamas Versprechen","uniqueId":"http://xml.zeit.de/online/2009/04/vereidigung-obama-ziele-versprechen","volume":4,"year":2009},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-05T16:20:19.598Z","published":"published-with-changes","ressort":"Politik","supertitle":"Obamas Moskaureise","teaser_title":"Obama fordert Russland zur Zusammenarbeit auf","title":"Obama fordert Russland zur Zusammenarbeit auf","uniqueId":"http://xml.zeit.de/online/2009/28/obama-in-russland","volume":28,"year":2009,"authors":["on"]},{"icon":"/++noop++bb9209f308a597bc5a39fb6d6b2e80bf/@@/zeit-content-link-interfaces-ILink-zmi_icon.png","last-semantic-change":"2009-01-20T20:43:12Z","published":"published-with-changes","ressort":"International","supertitle":"Link zum Transkript","teaser_title":"Obamas Rede im Wortlaut","title":"Obamas Rede im Wortlaut","uniqueId":"http://xml.zeit.de/online/2009/04/obama-rede-transkript","volume":4,"year":2009},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-25T14:10:14.546Z","published":"published-with-changes","ressort":"Politik","supertitle":"Unruhen in Iran","teaser_title":"Ahmadineschad fordert von Obama Entschuldigung","title":"Ahmadineschad fordert von Obama Entschuldigung","uniqueId":"http://xml.zeit.de/online/2009/27/iran-mussawi-verhandlungen","volume":26,"year":2009,"authors":["kg"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-26T19:22:50.141Z","published":"published","ressort":"Politik","supertitle":"Merkel trifft Obama ","teaser_title":"\"Obama und ich sind sehr eng beieinander\" ","title":"\"Obama und ich sind sehr eng beieinander\" ","uniqueId":"http://xml.zeit.de/online/2009/27/merkel-obama-unterstuetzung","volume":27,"year":2009,"authors":["misch"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-10T16:55:36.172Z","published":"published","ressort":"Politik","supertitle":"Diplomatie","teaser_title":"Obama nominiert Botschafter für Deutschland","title":"Obama nominiert Botschafter für Deutschland","uniqueId":"http://xml.zeit.de/online/2009/29/obama-botschafter","volume":29,"year":2009,"authors":["kg"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-13T07:26:16.596Z","published":"published","ressort":"Politik","supertitle":"Besuch in Ghana","teaser_title":"Obama ermuntert Afrikaner zur Eigenverantwortung","title":"Obama ermuntert Afrikaner zur Eigenverantwortung","uniqueId":"http://xml.zeit.de/online/2009/29/obama-ghana-demokratie","volume":29,"year":2009,"authors":["lg"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-07-06T15:44:15.87Z","published":"published-with-changes","ressort":"Meinung","supertitle":"Obamas Russlandkurs","teaser_title":"Liebesgrüße nach Moskau","title":"Liebesgrüße nach Moskau","uniqueId":"http://xml.zeit.de/online/2009/28/obama-russland-besuch","year":2009,"authors":["Christoph von Marschall"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-29T11:15:15.413Z","published":"published-with-changes","ressort":"Politik","supertitle":"Deutsche Volksparteien","teaser_title":"Die Zeit der Helden und Alpha-Tiere ist vorbei","title":"Die Zeit der Helden und Alpha-Tiere ist vorbei","uniqueId":"http://xml.zeit.de/online/2009/26/volksparteien-charisma","volume":26,"year":2009,"authors":["Werner A. Perger"]},{"icon":"/++noop++2f531e4061a5a16fa90b3ab4fe6977c8/@@/zeit-content-gallery-interfaces-IGallery-zmi_icon.png","last-semantic-change":"2009-02-04T08:32:24.705Z","published":"published-with-changes","ressort":"International","supertitle":"Obamas Amtsantritt","teaser_title":"Tanz quer durch Washington","title":"Tanz quer durch Washington","uniqueId":"http://xml.zeit.de/online/2009/04/bg-obama-mi","volume":4,"year":2009,"authors":["Redaktion"]},{"icon":"/++noop++7b96ef8299459c6372971b040141db4d/@@/zeit-content-article-interfaces-IArticle-zmi_icon.png","last-semantic-change":"2009-06-26T09:57:20.148Z","published":"published","ressort":"Politik","supertitle":"Merkel in Washington","teaser_title":"Geschäftliche Routine mit Obama","title":"Geschäftliche Routine mit Obama","uniqueId":"http://xml.zeit.de/online/2009/26/merkel-obama-besuch","volume":26,"year":2009,"authors":["Martin Klingst"]}]}}
